Componet structure for add student

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,97 +1,52 @@
 <h1 id="tableLabel">Students</h1>
 
 <p *ngIf="!students"><em>Loading...</em></p>
-
-<button (click)="toggleAddForm()">
-  {{ showAddForm ? 'Cancel' : 'Add Student' }}
-</button>
-<div *ngIf="!showAddForm">
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="students">
-  <thead>
-    <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>Email</th>
-      <th>Major</th>
-      <th>Average Grade</th>
-      <th>Grade List</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let student of students" [ngClass]="getGradeColor(student.averageGrade)">
-      <td>{{ student.firstName }}</td>
-      <td>{{ student.lastName }}</td>
-      <td>{{ student.email }}</td>
-      <td>{{ student.major }}</td>
-      <td>
-        <p *ngIf="student.grades && student.grades.length > 0">
-          {{ student.averageGrade | number:'1.1-1' }}%
-        </p>
-      </td>
-      <td>
-        <table>
-          <tbody>
-            <tr *ngFor="let grade of student.grades">
-              <td>{{ grade.subjectName }}</td>
-              <td>{{ grade.score }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-      <td> <button (click)="deleteStudent(student.id)">Delete</button></td>
-    </tr>
-  </tbody>
-</table>
+<div class="row">
+  <!-- <div class="col-sm-offset-2 col-sm-10">
+    <button class="btn btn-primary mb-3" (click)="toggleAddForm()">Add Student</button>
+  </div> -->
+  <div class="col-sm-offset-2 col-sm-10 align-left">
+    <button routerLink="/add-student" class="btn btn-primary mb-3">Add Student</button>
+  </div>
+</div>
+<div>
+  <table class="table table-striped" aria-labelledby="tableLabel" *ngIf="students">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Firstname</th>
+        <th scope="col">Lastname</th>
+        <th scope="col">Email</th>
+        <th scope="col">Major</th>
+        <th scope="col">Average Grade</th>
+        <th scope="col">Grade List</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let student of students">
+        <td>{{ student.firstName }}</td>
+        <td>{{ student.lastName }}</td>
+        <td>{{ student.email }}</td>
+        <td>{{ student.major }}</td>
+        <td [ngClass]="getGradeColor(student.averageGrade)">
+          <p *ngIf="student.grades && student.grades.length > 0">
+            {{ student.averageGrade | number:'1.1-1' }}%
+          </p>
+        </td>
+        <td>
+          <table class="table table-striped">
+            <tbody>
+              <tr *ngFor="let grade of student.grades">
+                <td>{{ grade.subjectName }}</td>
+                <td>{{ grade.score }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+        <td> <button class="btn btn-danger" (click)="deleteStudent(student.id)">Delete</button></td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 
 <div>
-  <!-- Show/Hide Add Student Form Button -->
- 
-
-  <!-- Add Student Form (conditionally displayed) -->
-  <div *ngIf="showAddForm">
-    <h2>Add New Student</h2>
-    <form #studentForm="ngForm" (ngSubmit)="addStudent()">
-      <label>First Name:</label>
-      <input type="text" name="firstName" [(ngModel)]="newStudent.firstName" required>
-
-      <label>Last Name:</label>
-      <input type="text" name="lastName" [(ngModel)]="newStudent.lastName" required>
-
-      <label>Email:</label>
-      <input type="email" name="email" [(ngModel)]="newStudent.email" required>
-
-      <label>Major:</label>
-      <!-- <input type="text" name="major" [(ngModel)]="newStudent.major" required> -->
-      <select id="major" name="major" [(ngModel)]="newStudent.major" required>
-        <option *ngFor="let subject of subjects" [value]="subject">{{ subject }}</option>
-      </select>
-      <hr>
-
-      <div *ngFor="let grade of newStudent.grades; let i = index">
-        <label>Subject Name:</label>
-        <!-- <input type="text" [(ngModel)]="grade.subjectName" name="subjectName{{ i }}" required> -->
-        <select id="subject{{ i }}" name="subjectName{{ i }}" [(ngModel)]="grade.subjectName" required>
-          <option *ngFor="let subject of subjects" [value]="subject">{{ subject }}</option>
-        </select>
-
-        <label>Score:</label>
-        <input type="number" [(ngModel)]="grade.score" name="score{{ i }}" required>
-
-        <button type="button" (click)="removeGrade(i)">Remove</button>
-      </div>
-
-      <label>Subject Name:</label>
-      <!-- <input type="text" [(ngModel)]="newGrade.subjectName" name="newSubjectName"> -->
-      <select id="subject" name="subjectName" [(ngModel)]="newGrade.subjectName" required>
-        <option *ngFor="let subject of subjects" [value]="subject">{{ subject }}</option>
-      </select>
-      <label>Score:</label>
-      <input type="number" [(ngModel)]="newGrade.score" name="newScore">
-
-      <button type="button" (click)="addGrade()">Add Grade</button>
-
-      <button type="submit">Save Student</button>
-    </form>
-  </div>
